# mduck

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  GEMINI.md  LICENSE  README.md  compose.yml  install.sh  pyproject.toml  tox.ini
.gemini/tmp/: commit_message.txt
.github/: dependabot.yml
.github/workflows/: release.yml
src/config/: .env_sample  settings.py  system_prompts.json
src/mduck/: dp.py  log.py  main.py  version.py
src/mduck/containers/: application.py  gateways.py
src/mduck/handlers/: chat_member.py  commands.py  echo.py  message.py  new_chat_member.py  sticker.py
src/mduck/main/: pooling.py  webhook.py
src/mduck/middlewares/: log_context.py
src/mduck/repositories/: ollama.py  redis.py
src/mduck/routers/: healthcheck.py  webhook.py  whoami.py
src/mduck/schemas/: queue.py
src/mduck/services/: mduck.py
src/prompts/: 10_zen_duck.txt  1_rude_mockery.txt  2_rage_attack.txt  3_grumpy_impatient.txt  4_arrogant_noir.txt  5_maniacal_vortex.txt  6_intellectual_snob.txt  7_nihilist_despair.txt  8_pirate_duck.txt  9_conspiracy_duck.txt  prompt_1.txt  prompt_2.txt  prompt_3.txt  prompt_4.txt  prompt_5.txt  prompt_6.txt
tests/: conftest.py  test_dp.py  test_main.py
tests/handlers/: test_chat_member.py  test_commands.py  test_echo.py  test_message.py  test_new_chat_member.py  test_sticker.py
tests/main/: test_pooling.py  test_webhook.py
tests/middlewares/: test_log_context.py
tests/repositories/: test_ollama.py
tests/routers/: test_healthcheck.py  test_webhook.py  test_whoami.py
tests/routes/: test_healthcheck.py
tests/services/: test_mduck.py
