[project]
name = "mduck"
version = "0.0.0"
description = "A caustic Telegram bot service."
authors = [
    {name = "AATrubilin",email = "aatrubilin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "dependency-injector (>=4.48.3,<5.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "aiogram (>=3.24.0,<4.0.0)",
    "ollama (>=0.6.1,<0.7.0)"
]

[tool.poetry]
packages = [{include = "mduck", from = "src"}]
scripts = { run-webhook = "mduck.main.webhook:main", run-pooling = "mduck.main.pooling:main" }

[tool.commitizen]
version = "0.0.0"
name = "cz_conventional_commits"
tag_format = "v{version}"
version_scheme = "semver2"
version_provider = "poetry"
version_files = [
    "pyproject.toml:version",
]
update_changelog_on_bump = true
major_version_zero = true

[tool.semantic_release]
branch = "master"
upload_to_pypi = false
upload_to_release = true
major_on_zero = true
build_command = "pip install poetry && poetry build"
commit_author = "semantic-release <semantic-release@users.noreply.github.com>"
changelog_file = "CHANGELOG.md"
commit_message = "chore(release): {version} [skip ci]"
hvcs = "github"
version_source = "tag"
version_toml = [
    "pyproject.toml:project.version",
    "pyproject.toml:tool.commitizen.version",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "ruff (>=0.14.11,<0.15.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "tox (>=4.34.1,<5.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "watchdog (>=6.0.0,<7.0.0)",
    "python-semantic-release (>=10.5.3,<11.0.0)",
    "commitizen (>=4.11.6,<5.0.0)",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
# E = pycodestyle errors, F = pyflakes, W = pycodestyle warnings
# B = flake8-bugbear, C4 = flake8-comprehensions, D = flake8-docstrings
# I = isort, PT = flake8-pytest-style, SIM = flake8-simplify
select = ["E", "F", "W", "B", "C4", "D", "I", "PT", "SIM"]

# Ignore some rules if necessary, e.g. D100, D104 for missing docstrings in public modules/packages
ignore = ["D100", "D104", "D107", "D105", "D203", "D212"]

[tool.ruff.format]
quote-style = "double"

[tool.coverage.run]
source = ["src/mduck"]
