[tool.poetry]
name = "mduck"
version = "1.13.0"
description = "A caustic Telegram bot service."
authors = ["AATrubilin <aatrubilin@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "mduck", from = "src"}]
scripts = { run-webhook = "mduck.main.webhook:main", run-pooling = "mduck.main.pooling:main" }

[tool.poetry.dependencies]
python = ">=3.14,<3.15"
aiogram = ">=3.24.0,<4.0.0"
dependency-injector = ">=4.48.3,<5.0.0"
fastapi = ">=0.128.0,<0.129.0"
ollama = ">=0.6.1,<0.7.0"
pydantic = ">=2.12.5,<3.0.0"
pydantic-settings = ">=2.12.0,<3.0.0"
python-json-logger = "^4.0.0"
uvicorn = ">=0.40.0,<0.41.0"

[tool.poetry.group.dev.dependencies]
commitizen = ">=4.11.6,<5.0.0"
httpx = ">=0.28.1,<0.29.0"
mypy = ">=1.19.1,<2.0.0"
pre-commit = ">=4.5.1,<5.0.0"
pytest = ">=9.0.2,<10.0.0"
pytest-asyncio = ">=1.3.0,<2.0.0"
pytest-cov = ">=7.0.0,<8.0.0"
python-semantic-release = ">=10.5.3,<11.0.0"
ruff = ">=0.14.11,<0.15.0"
tox = ">=4.34.1,<5.0.0"
watchdog = ">=6.0.0,<7.0.0"
genbadge = {extras = ["coverage"], version = ">=1.1.2,<2.0.0"}
coverage = {extras = ["toml"], version = ">=7.6.0,<8.0.0"}

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v{version}"
update_changelog_on_bump = true
version = "1.13.0"
version_files = [
    "pyproject.toml:version",
]
version_provider = "poetry"
version_scheme = "semver2"

[tool.coverage.run]
source = ["src/mduck"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
# E = pycodestyle errors, F = pyflakes, W = pycodestyle warnings
# B = flake8-bugbear, C4 = flake8-comprehensions, D = flake8-docstrings
# I = isort, PT = flake8-pytest-style, SIM = flake8-simplify
ignore = ["D100", "D104", "D107", "D105", "D203", "D212"]
select = ["E", "F", "W", "B", "C4", "D", "I", "PT", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.semantic_release]
branch = "master"
build_command = "pip install poetry && poetry build"
changelog_file = "CHANGELOG.md"
commit_author = "semantic-release <semantic-release@users.noreply.github.com>"
commit_message = "chore(release): {version} [skip ci]"
hvcs = "github"
major_on_zero = true
upload_to_pypi = false
upload_to_release = true
version_source = "tag"
version_toml = [
    "pyproject.toml:tool.poetry.version",
    "pyproject.toml:tool.commitizen.version",
]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0,<3.0.0"]
